# thesaurus-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: both.rs  moby.rs  simple.rs  time.rs  wordnet.rs
src/: lib.rs  moby.rs  wordnet.rs
thesaurus-moby/: Cargo.toml  README.md  build.rs
thesaurus-moby/src/: lib.rs
thesaurus-wordnet/: Cargo.toml  README.md  build.rs
thesaurus-wordnet/src/: lib.rs
