[package]
name = "thesaurus"
version = "0.4.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An offline thesaurus library for Rust."
repository = "https://github.com/grantshandy/thesaurus-rs"
documentation = "https://docs.rs/thesaurus"
keywords = ["thesaurus", "synonym", "synonyms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thesaurus-moby = { version = "0.1.0",  optional = true }
thesaurus-wordnet = { version = "0.1.0", optional = true }
# thesaurus-moby = { path = "./thesaurus-moby/",  optional = true }
# thesaurus-wordnet = { path = "./thesaurus-wordnet/", optional = true }

[features]
default = ["wordnet"]
wordnet = ["thesaurus-wordnet"]
moby = ["thesaurus-moby"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "wordnet"
required-features = ["wordnet"]

[[example]]
name = "moby"
required-features = ["moby"]

[[example]]
name = "both"
required-features = ["moby", "wordnet"]