[package]
name = "thesaurus"
version = "0.5.1"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An offline thesaurus library for Rust."
repository = "https://github.com/grantshandy/thesaurus-rs"
documentation = "https://docs.rs/thesaurus"
keywords = ["thesaurus", "synonym", "synonyms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thesaurus-moby = { version = "0.1",  optional = true }
thesaurus-wordnet = { version = "0.1", optional = true }

[dev-dependencies]
cfg-if = "1"

[features]
default = ["wordnet"]
wordnet = ["thesaurus-wordnet"]
moby = ["thesaurus-moby"]
