[package]
name = "thesaurus"
version = "0.5.2"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An offline thesaurus library for Rust."
repository = "https://github.com/grantshandy/thesaurus-rs"
documentation = "https://docs.rs/thesaurus"
keywords = ["thesaurus", "synonym", "synonyms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lazy_static = { version = "1.4", optional = true }
thesaurus-moby = { version = "0.2",  optional = true }
thesaurus-wordnet = { version = "0.2", optional = true }

[dev-dependencies]
cfg-if = "1"

[features]
default = ["wordnet", "static"]
wordnet = ["thesaurus-wordnet"]
moby = ["thesaurus-moby"]
static = ["lazy_static"]