[package]
name = "thesaurus-wordnet"
version = "0.1.0"
edition = "2021"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "subcrate for thesaurus-rs"
license = "MIT"
repository = "https://github.com/grantshandy/thesaurus-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1.1"
lazy_static = "1.4"

[build-dependencies]
libflate = "1.1"
serde_json = "1.0"